5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3512/executions/1756_672.log
== SUBMITION (2019-05-28 20:16:44) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
n1= int(input("Digite: "))
n2= int(input("Digite: "))

for i in range(n1,n2+1):
	if (i%6==0):
		print(i)
-- EXECUTION TIME:
0.152095
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/672/main.py", line 3, in <module>
    n2= int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:17:43) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import
n1= int(input("Digite: "))
n2= int(input("Digite: "))

for i in range(n1,n2+1):
	if (i%6==0):
		print(i)
-- ERROR:
File "XXXX", line 2
    from numpy import
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:17:53) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n1= int(input("Digite: "))
n2= int(input("Digite: "))

for i in range(n1,n2+1):
	if (i%6==0):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
